--- a/fenics/Dockerfile
+++ b/fenics/Dockerfile
@@ -14,17 +14,11 @@ RUN conda env update -n base -f ${HOME}/environment.yml && \
 
 USER root
 RUN fix-permissions /home/$DOCKER_USER &&\
-    fix-permissions $CONDA_DIR &&\
-    chmod +x ${HOME}/include_notebooks.sh &&\
-    fix-permissions /home/$DOCKER_USER
-
-USER $DOCKER_UID
-RUN /bin/bash include_notebooks.sh 
-
-USER root
-RUN fix-permissions /home/$DOCKER_USER && \
+    fix-permissions $CONDA_DIR && \
+    chmod +x ${HOME}/include_notebooks.sh && \
+    /bin/bash include_notebooks.sh &&\
+    fix-permissions /home/$DOCKER_USER && \
     chown -R ${DOCKER_USER}:${DOCKER_GID} ${HOME}/*.ipynb
-
 
 # Switch back to pyiron to avoid accidental container runs as root
 USER $DOCKER_UID
