--- a/experimental/Dockerfile
+++ b/experimental/Dockerfile
@@ -14,14 +14,10 @@ RUN conda env update -n base -f ${HOME}/environment.yml --prune && \
     conda list
 
 USER root
-RUN fix-permissions /home/$DOCKER_USER &&\
-    fix-permissions $CONDA_DIR && \
-    chmod +x ${HOME}/include_notebooks.sh && \
+RUN chmod +x ${HOME}/include_notebooks.sh && \
     /bin/bash ${HOME}/include_notebooks.sh && \
-    fix-permissions /home/$DOCKER_USER && \
-    chown -R ${DOCKER_USER}:${DOCKER_GID} ${HOME}/*.ipynb && \
-    chown -R ${DOCKER_USER}:${DOCKER_GID} ${HOME}/*.tif && \
-    chown -R ${DOCKER_USER}:${DOCKER_GID} ${HOME}/*.emd
+    fix-permissions $CONDA_DIR && \
+    fix-permissions /home/$DOCKER_USER
     
 # Switch back to pyiron to avoid accidental container runs as root
 USER $DOCKER_UID
