--- a/md/Dockerfile
+++ b/md/Dockerfile
@@ -25,12 +25,10 @@ RUN conda env update -n base -f ${HOME}/environment.yml && \
     conda list
 
 USER root
-RUN fix-permissions /home/$DOCKER_USER &&\
-    fix-permissions $CONDA_DIR && \
-    chmod +x ${HOME}/include_notebooks.sh && \
+RUN chmod +x ${HOME}/include_notebooks.sh && \
     /bin/bash include_notebooks.sh &&\
     fix-permissions /home/$DOCKER_USER && \
-    chown -R ${DOCKER_USER}:${DOCKER_GID} ${HOME}/*.ipynb
+    fix-permissions $CONDA_DIR
 
 # Switch back to pyiron to avoid accidental container runs as root
 USER $DOCKER_UID
