--- a/fenics/Dockerfile
+++ b/fenics/Dockerfile
@@ -13,12 +13,10 @@ RUN conda env update -n base -f ${HOME}/environment.yml && \
     conda clean --all -f -y
 
 USER root
-RUN fix-permissions /home/$DOCKER_USER &&\
-    fix-permissions $CONDA_DIR && \
-    chmod +x ${HOME}/include_notebooks.sh && \
-    /bin/bash include_notebooks.sh &&\
-    fix-permissions /home/$DOCKER_USER && \
-    chown -R ${DOCKER_USER}:${DOCKER_GID} ${HOME}/*.ipynb
+RUN chmod +x ${HOME}/include_notebooks.sh && \
+      /bin/bash include_notebooks.sh && \
+      fix-permissions $CONDA_DIR && \
+      fix-permissions /home/$DOCKER_USER
 
 # Switch back to pyiron to avoid accidental container runs as root
 USER $DOCKER_UID
