updating damask/Dockerfile

--- a/damask/Dockerfile
+++ b/damask/Dockerfile
@@ -15,14 +15,10 @@ RUN conda env update -n base -f ${HOME}/environment.yml --prune && \
 
 USER root
 RUN rm ${HOME}/*.ipynb &&\
-    /bin/bash $HOME/postBuild &&\
-    rm -r $HOME/DAMASK/ && \
-    rm $HOME/postBuild && \
-    rm $HOME/python.patch &&\
     chmod +x ${HOME}/include_notebooks.sh && \
     /bin/bash ${HOME}/include_notebooks.sh && \
     fix-permissions /home/$DOCKER_USER && \
-    fix-permissions $CONDA_DIRs
+    fix-permissions $CONDA_DIR
 
 # Switch back to pyiron to avoid accidental container runs as root
 USER $DOCKER_UID
