--- a/md/environment.yml
+++ b/md/environment.yml
@@ -2,6 +2,6 @@ channels:
 - conda-forge
 dependencies:
 - pyiron =0.4.0
-- pyiron_atomistics =0.2.3
+- pyiron_atomistics =0.2.4
 - nglview =2.7.7
-- lammps =2021.02.10=*openmpi*
+- lammps =2021.02.10=*openmpi*_4
