--- a/potentialworkshop/environment.yml
+++ b/potentialworkshop/environment.yml
@@ -5,6 +5,8 @@ dependencies:
 - atomicrex =1.0.1
 - runner =1.2
 - structdbrest =0.0.1
+- pyiron_contrib =0.0.3
+- pyiron_gpl =0.0.2
 - pip
 - pip:
     - pyace-lite
