--- a/experimental/environment.yml
+++ b/experimental/environment.yml
@@ -1,10 +1,11 @@
 channels:
 - conda-forge
 dependencies:
+- pyiron_experimental =0.0.1
 - temmeta =0.0.6
-- pyprismatic =1.2.1 
+- pyprismatic =1.2.1
 - match-series =1.0.4
 - pyxem =0.13.1
 - pystem =0.0.25
 - scanf =1.5.2
-- hyperspy =1.6.1
+- hyperspy =1.6.2
