--- a/continuum/environment.yml
+++ b/continuum/environment.yml
@@ -1,13 +1,14 @@
 channels:
 - conda-forge
+- conda-forge/label/broken
 dependencies:
 - python =3.8*
-- lammps =2021.05.27=*mpich*
+- lammps =2021.07.30=*mpich*
 - damask =3.0.0
 - vtk
 - itkwidgets
 - pyvista
-- pymatgen =2022.0.11
+- pymatgen =2022.0.14
 - sqsgenerator =0.0.5
 - fenics =2019.1.0
 - mshr =2019.1.0
