updating continuum env

--- a/continuum/environment.yml
+++ b/continuum/environment.yml
@@ -1,16 +1,15 @@
 channels:
 - conda-forge
-- conda-forge/label/broken
 dependencies:
 - python =3.8*
-- lammps =2021.07.30=*mpich*
-- damask =3.0.0
+- lammps =2021.09.29=*mpich*
+- damask =3.0.0a4
 - vtk
 - itkwidgets
 - pyvista
-- pymatgen =2022.0.14
+- pymatgen =2022.0.16
 - sqsgenerator =0.0.5
 - fenics =2019.1.0
 - mshr =2019.1.0
-- pyiron_continuum =0.0.2
+- pyiron_continuum =0.0.3
 - pyiron_gpl =0.0.3
