--- a/continuum/environment.yml
+++ b/continuum/environment.yml
@@ -4,8 +4,8 @@ dependencies:
 - lammps =2021.09.29=*mpich*
 - damask =3.0.0a5
 - fenics =2019.1.0
-- itkwidgets
 - mshr =2019.1.0
+- panel =0.12.6
 - pyiron_continuum =0.0.4
 - pyiron_gpl =0.0.3
 - pymatgen =2022.0.16
