updating continuum/Dockerfile; removing prune option

--- a/continuum/Dockerfile
+++ b/continuum/Dockerfile
@@ -20,7 +20,7 @@ ARG PYTHON_VERSION=default
 
 COPY . ${HOME}/
 RUN mamba remove openmpi && \
-    mamba env update -n base -f ${HOME}/environment.yml --prune && \
+    mamba env update -n base -f ${HOME}/environment.yml && \
     conda clean --all -f -y && \
     conda list
 
