updating experimental/Dockerfile

--- a/experimental/Dockerfile
+++ b/experimental/Dockerfile
@@ -17,7 +17,7 @@ USER root
 RUN chmod +x ${HOME}/include_notebooks.sh && \
     /bin/bash ${HOME}/include_notebooks.sh && \
     fix-permissions $CONDA_DIR && \
-    fix-permissions /home/$DOCKER_USER
+    fix-permissions ${HOME}
     
 # Switch back to pyiron to avoid accidental container runs as root
 USER $DOCKER_UID
