--- a/continuum/environment.yml
+++ b/continuum/environment.yml
@@ -1,7 +1,7 @@
 channels:
 - conda-forge
 dependencies:
-- python >=3.9,<3.10
+- python =3.9
 - lammps =2021.07.30=*mpich*
 - damask =3.0.0a5
 - fenics =2019.1.0
