--- a/base/environment.yml
+++ b/base/environment.yml
@@ -2,5 +2,6 @@ channels:
 - conda-forge
 dependencies:
 - ipywidgets
-- pyiron_base =0.5.7
-- seaborn =0.11.2
+- pyiron_base =0.5.32
+- seaborn =0.12.2
+- sqlalchemy =1.4.46
