--- a/continuum/environment.yml
+++ b/continuum/environment.yml
@@ -3,6 +3,7 @@ channels:
 dependencies:
 - lammps =2022.06.23=*mpich*
 - damask =3.0.0a6
+- hdf5 =1.12.1=*mpich*
 - fenics =2019.1.0
 - mshr =2019.1.0
 - panel =0.14.3
