--- a/continuum/environment.yml
+++ b/continuum/environment.yml
@@ -1,9 +1,8 @@
 channels:
 - conda-forge
 dependencies:
-- lammps =2021.09.29=*mpich*  # latest lammps version build with hdf5 1.12.1
-- damask =3.0.0a6  # requires hdf5 1.12.1
-- hdf5 =1.12.1=*mpich*
+- lammps =2021.07.30=*mpich*
+- damask =3.0.0a5
 - fenics =2019.1.0=*_24
 - mshr =2019.1.0
 - panel =0.14.3
