--- a/pyiron/environment.yml
+++ b/pyiron/environment.yml
@@ -1,5 +1,5 @@
 channels:
 - conda-forge
 dependencies:
-- sphinxdft =3.0.3=*_4
-- gpaw =22.1.0=*openmpi*
+- sphinxdft =3.0.7
+- gpaw =22.8.0=*openmpi*
