--- a/continuum/environment.yml
+++ b/continuum/environment.yml
@@ -1,7 +1,7 @@
 channels:
 - conda-forge
 dependencies:
-- lammps =2022.06.23=*mpich*
+- lammps =*mpich*
 - damask =3.0.0a7
 - fenics =2019.1.0=*_34
 - mshr =2019.1.0=*_6
