--- a/continuum/Dockerfile
+++ b/continuum/Dockerfile
@@ -19,8 +19,7 @@ WORKDIR $HOME
 ARG PYTHON_VERSION=default
 
 COPY . ${HOME}/
-RUN mamba remove openmpi && \
-    mamba env update -n base -f ${HOME}/environment.yml && \
+RUN mamba env update -n base -f ${HOME}/environment.yml && \
     conda clean --all -f -y && \
     conda list
 
