--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -37,8 +37,8 @@ RUN mamba env update -n base -f ${HOME}/environment.yml && \
 
 # Fix permissions on /etc/jupyter as root
 USER root
-RUN chmod +x ${HOME}/include_notebooks.sh && \
-    /bin/bash include_notebooks.sh &&\
+RUN chmod +x ${HOME}/aggregate_and_clean.sh && \
+    /bin/bash aggregate_and_clean.sh &&\
     fix-permissions /etc/jupyter/ &&\
     fix-permissions ${HOME} && \
     fix-permissions $CONDA_DIR
