--- a/md/Dockerfile
+++ b/md/Dockerfile
@@ -2,7 +2,7 @@ ARG ROOT_CONTAINER=pyiron/base:latest
 ARG BASE_CONTAINER=$ROOT_CONTAINER
 FROM $BASE_CONTAINER
 
-MAINTAINER Jan Janssen <janssen@mpie.de>, Muhammad Hassani <hassani@mpie.de>
+MAINTAINER Jan Janssen <janssen@mpie.de>, Marian Bruns <m.bruns@mpie.de>
 
 USER $DOCKER_UID
 WORKDIR $HOME
@@ -23,7 +23,7 @@ RUN chmod +x ${HOME}/include_notebooks.sh && \
     fix-permissions ${HOME} && \
     fix-permissions $CONDA_DIR
 
-# Switch back to pyiron to avoid accidental container runs as root
+# Switch back to avoid accidental container runs as root
 USER $DOCKER_UID
 
 WORKDIR $HOME
