--- a/potentialworkshop/environment.yml
+++ b/potentialworkshop/environment.yml
@@ -1,13 +1,14 @@
 channels:
 - conda-forge
+- defaults
 dependencies:
-- atomicrex =1.0.3
-- runner =1.2
-- structdbrest =0.0.1
-- pyiron_contrib =0.1.6
-- pyiron_gpl =0.0.3
-- nbgitpuller =1.1.1
-- libmamba =1.1.0
+- atomicrex 
+- runner 
+- structdbrest 
+- pyiron_contrib 
+- pyiron_gpl 
+- nbgitpuller 
+- libmamba 
 - pip
 - pip:
     - pyace-lite
