switched to a base-notebook image with python=3.10.11 due to dependency issues in child-image 'potentialwirkshop' and package 'atomirex'

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,4 +1,4 @@
-ARG ROOT_CONTAINER=jupyter/base-notebook:ubuntu-22.04@sha256:b0dd163091ed964d349193a08d2c68fad964c680b57ead288afd3bca132417f0
+ARG ROOT_CONTAINER=jupyter/base-notebook:python-3.10.11@sha256:ae616b39021e6e2bd7a645f9ef8a802b1f5133bfa19f5ee4477de4a4d33f38e7
 ARG BASE_CONTAINER=$ROOT_CONTAINER
 FROM $BASE_CONTAINER
 
