--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,4 +1,4 @@
-ARG ROOT_CONTAINER=jupyter/base-notebook:python-3.10.11@sha256:ae616b39021e6e2bd7a645f9ef8a802b1f5133bfa19f5ee4477de4a4d33f38e7
+ARG ROOT_CONTAINER=jupyter/base-notebook:ubuntu-22.04@sha256:01b530a88572e0f4a297ffb0a8e674be00efe61571558303e5d
 ARG BASE_CONTAINER=$ROOT_CONTAINER
 FROM $BASE_CONTAINER
 
