--- a/potentialworkshop/Dockerfile
+++ b/potentialworkshop/Dockerfile
@@ -10,8 +10,8 @@ ARG PYTHON_VERSION=default
 
 COPY . ${HOME}/
 RUN mamba env update -n base -f ${HOME}/environment.yml && \
-    conda clean --all -f -y && \
-    conda list
+    mamba clean --all -f -y && \
+    mamba list
 
 USER root
 RUN chmod +x ${HOME}/include_notebooks.sh && \
