--- a/continuum/environment.yml
+++ b/continuum/environment.yml
@@ -2,8 +2,8 @@ channels:
 - conda-forge
 dependencies:
 - damask =3.0.0a7
-- fenics =2019.1.0=*_34
-- mshr =2019.1.0=*_7
+- fenics =2019.1.0
+- mshr =2019.1.0
 - panel =0.14.3
 - pyiron_continuum =0.0.5
 - pyiron_gpl =0.0.3
