--- a/continuum/environment.yml
+++ b/continuum/environment.yml
@@ -4,11 +4,9 @@ dependencies:
 - damask =3.0.0a7
 - fenics =2019.1.0
 - mshr =2019.1.0
-- panel =0.14.3
 - pyiron_continuum =0.0.6
 - pyiron_gpl =0.0.3
-- pymatgen =2022.11.7
-- pyvista
-- sqsgenerator =0.2
-- vtk
-- libmamba =1.1.0
+- pymatgen =2023.10.11
+- pyvista =0.42.3
+- sqsgenerator =0.3
+- vtk =9.2.6
