--- a/continuum/environment.yml
+++ b/continuum/environment.yml
@@ -5,9 +5,8 @@ dependencies:
 - fenics =2019.1.0=*_38
 - mshr =2019.1.0=*_9
 - pyiron_continuum =0.0.6
-# - pyiron_gpl
-# - pymatgen
-# - pyvista
-# - sqsgenerator
-# - vtk
-- hdf5 =1.12.2
+- pyiron_gpl =0.3
+- pymatgen
+- pyvista
+- sqsgenerator =0.3
+- vtk
