--- a/continuum/environment.yml
+++ b/continuum/environment.yml
@@ -2,13 +2,11 @@ channels:
 - conda-forge
 dependencies:
 - damask =3.0.0a7
-- fenics =2019.1.0=*_34
-- mshr =2019.1.0=*_7
-- panel =0.14.3
-- pyiron_continuum =0.0.5
+- fenics =2019.1.0=*_38
+- mshr =2019.1.0=*_9
+- pyiron_continuum =0.0.6
 - pyiron_gpl =0.0.3
-- pymatgen =2022.11.7
+- pymatgen
 - pyvista
-- sqsgenerator =0.2
+- sqsgenerator =0.3
 - vtk
-- libmamba =1.1.0
