--- a/md/environment.yml
+++ b/md/environment.yml
@@ -3,6 +3,7 @@ channels:
 dependencies:
 - pyiron =0.5.0
 - pyiron_atomistics =0.3.4
+- pyscal =2.10.18
 - maggma =0.57.4
 - pyiron-data =0.0.25
 - nglview =3.0.8
