--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,7 +2,8 @@ name: Docker Push
 
 on:
   push:
-    branches: [ main ]
+    tags:
+      - "*.*.*"
 
 jobs:
   build:
@@ -12,16 +13,6 @@ jobs:
       - name: Get current date
         id: date
         run: echo "::set-output name=date::$(date +%F)"
-      - name: create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.date.outputs.date }}
-          release_name: Release ${{ steps.date.outputs.date }}
-          draft: false
-          prerelease: false
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
       - run: docker build -t pyiron/base:latest base/
@@ -49,3 +40,22 @@ jobs:
       - run: docker push pyiron/experimental:"$(date +%F)"
       - run: docker push pyiron/continuum:latest
       - run: docker push pyiron/continuum:"$(date +%F)"
+      - run: mkdir -p environment
+      - run: docker run -v $(pwd)/environment:/home/jovyan/ --rm pyiron/base /bin/bash -c 'source /opt/conda/bin/activate; conda env export > /home/jovyan/pyiron_base_$(date +%F).yml;' 
+      - run: docker run -v $(pwd)/environment:/home/jovyan/ --rm pyiron/md /bin/bash -c 'source /opt/conda/bin/activate; conda env export > /home/jovyan/pyiron_md_$(date +%F).yml;' 
+      - run: docker run -v $(pwd)/environment:/home/jovyan/ --rm pyiron/continuum /bin/bash -c 'source /opt/conda/bin/activate; conda env export > /home/jovyan/pyiron_continuum_$(date +%F).yml;' 
+      - run: docker run -v $(pwd)/environment:/home/jovyan/ --rm pyiron/pyiron /bin/bash -c 'source /opt/conda/bin/activate; conda env export > /home/jovyan/pyiron_pyiron_$(date +%F).yml;' 
+      - run: docker run -v $(pwd)/environment:/home/jovyan/ --rm pyiron/potentialworkshop /bin/bash -c 'source /opt/conda/bin/activate; conda env export > /home/jovyan/pyiron_potentialworkshop_$(date +%F).yml;' 
+      - run: docker run -v $(pwd)/environment:/home/jovyan/ --rm pyiron/experimental /bin/bash -c 'source /opt/conda/bin/activate; conda env export > /home/jovyan/pyiron_experimental_$(date +%F).yml;'
+      - run: ls -al environment
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            environment/pyiron_base_$(date +%F).yml
+            environment/pyiron_md_$(date +%F).yml
+            environment/pyiron_continuum_$(date +%F).yml
+            environment/pyiron_pyiron_$(date +%F).yml
+            environment/pyiron_potentialworkshop_$(date +%F).yml
+            environment/pyiron_experimental_$(date +%F).yml
