--- a/potentialworkshop/environment.yml
+++ b/potentialworkshop/environment.yml
@@ -3,8 +3,7 @@ channels:
 dependencies:
 - atomicrex =1.0.3
 - runner =1.2
-- structdbrest =0.0.1
-- pyiron_contrib =0.1.13
+- pyiron_potentialfit =0.0.1
 - pyiron_gpl =0.0.3
 - nbgitpuller =1.2.0
 - python-ace =0.2.8
