--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Build
       shell: bash -l {0}
       run: |
-        python .ci_support/run.py --token ${{ secrets.GH_TOKEN }} 
+        python .ci_support/run.py -t ${{ secrets.GITHUB_TOKEN }} 
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@4.0.0
       with:
