--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -41,5 +41,5 @@ jobs:
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@4.0.0
       with:
-        branch: main
+        branch: gh-pages
         folder: public
