--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -50,6 +50,7 @@ RUN mamba env update -n base -f ${HOME}/environment.yml && \
 
 # Fix permissions on /etc/jupyter as root
 USER root
+ENV NOTEBOOK_DIR=${HOME}/notebooks_base
 RUN chmod +x ${HOME}/include_notebooks.sh && \
     /bin/bash include_notebooks.sh &&\
     fix-permissions /etc/jupyter/ &&\
