--- a/pyiron/Dockerfile
+++ b/pyiron/Dockerfile
@@ -9,12 +9,13 @@ WORKDIR $HOME
 ARG PYTHON_VERSION=default
 
 COPY . ${HOME}/
-RUN conda install -n base -c defaults mkl=2023.2.0 && \
+RUN mamba install -n base -c defaults mkl=2023.2.0 && \
     mamba env update -n base -f ${HOME}/environment.yml && \
     mamba clean --all -f -y && \
     mamba list
 
 USER root
+ENV NOTEBOOK_DIR=${HOME}/notebooks_pyiron
 RUN chmod +x ${HOME}/include_notebooks.sh && \
     /bin/bash include_notebooks.sh &&\
     fix-permissions $CONDA_DIR && \
