--- a/experimental/Dockerfile
+++ b/experimental/Dockerfile
@@ -14,6 +14,7 @@ RUN mamba env update -n base -f ${HOME}/environment.yml && \
     mamba list
 
 USER root
+ENV NOTEBOOK_DIR=${HOME}/notebooks_experimental
 RUN chmod +x ${HOME}/include_notebooks.sh && \
     /bin/bash ${HOME}/include_notebooks.sh && \
     fix-permissions $CONDA_DIR && \
