cleaned HOME of potentialworkshop image

--- a/continuum/Dockerfile
+++ b/continuum/Dockerfile
@@ -25,8 +25,7 @@ RUN mamba env update -n base -f ${HOME}/environment.yml && \
 
 USER root
 ENV NOTEBOOK_DIR=${HOME}/notebooks_continuum
-RUN rm ${HOME}/*.ipynb &&\
-    chmod +x ${HOME}/include_notebooks.sh && \
+RUN chmod +x ${HOME}/include_notebooks.sh && \
     /bin/bash ${HOME}/include_notebooks.sh && \
     fix-permissions ${HOME} && \
     fix-permissions $CONDA_DIR
