--- a/continuum/environment.yml
+++ b/continuum/environment.yml
@@ -4,6 +4,7 @@ dependencies:
 - damask =3.0.0a7
 - fenics =2019.1.0=*_38
 - mshr =2019.1.0=*_9
+- pyiron_atomistics =0.3.7
 - pyiron_continuum =0.0.6
 - pyiron_gpl =0.0.4
 - pyvista =0.42.3
