--- a/mpie_cmti/environment.yml
+++ b/mpie_cmti/environment.yml
@@ -2,12 +2,13 @@ channels:
 - conda-forge
 dependencies:
 - atomicrex =1.0.3
-- runner =1.2
-- pytorch =2.0.0
-- fitsnap3 =3.1.0.1
-- tensorflow =2.15.0
-- python-ace =0.2.8
 - calphy =1.2.12
-- pyxtal =0.6.1
-- pyiron_gpl =0.0.4
+- fitsnap3 =3.1.0.1
 - pyiron_contrib =0.1.13
+- pyiron_gpl =0.0.4
+- python-ace =0.2.8
+- pytorch =2.0.0
+- pyxtal =0.6.1
+- runner =1.2
+- structdbrest =0.0.1
+- tensorflow =2.15.0
