--- a/mpie_cmti/environment.yml
+++ b/mpie_cmti/environment.yml
@@ -6,6 +6,12 @@ dependencies:
 - fitsnap3 =3.1.0.1
 - nbgitpuller =1.2.0
 - pyiron_contrib =0.1.13
+- pyiron_workflow =0.2.1
+- pyiron_gui =0.0.11
+- pyxtal =0.6.1
+- matgl =0.9.2
+- mlip =2.0 
+- sqsgenerator =0.3
 - pyiron_gpl =0.0.4
 - python-ace =0.2.8
 - pytorch =2.0.0
