--- a/mpie_cmti/environment.yml
+++ b/mpie_cmti/environment.yml
@@ -6,6 +6,7 @@ dependencies:
 - fitsnap3 =3.1.0.1
 - nbgitpuller =1.2.1
 - pyiron_contrib =0.1.16
+- pyiron_potentialfit =0.2.0
 - pyiron_workflow =0.2.1
 - pyiron_gui =0.0.12
 - matgl =0.9.2
