--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ nglview==3.1.2
 pyiron-atomistics==0.5.0
 pyiron-continuum==0.0.8
 pyiron-contrib==0.1.16
+pyiron_potentialfit==0.2.0
 pyiron-gpl==0.0.4
 pyiron==0.5.2
 pyiron_base==0.8.0
