--- a/mpie_cmti/environment.yml
+++ b/mpie_cmti/environment.yml
@@ -2,12 +2,15 @@ channels:
 - conda-forge
 dependencies:
 - atomicrex =1.0.3
-- calphy =1.3.7
+- calphy =1.3.8
 - fitsnap3 =3.1.0.1
 - nbgitpuller =1.2.1
+- pyiron_base =0.9.1
+- pyiron-atomistics =0.6.1
+- pyiron_snippets =0.1.2
 - pyiron_contrib =0.1.16
 - pyiron_potentialfit =0.2.0
-- pyiron_workflow =0.2.1
+- pyiron_workflow =0.8.0
 - pyiron_gui =0.0.12
 - matgl =0.9.2
 - mlip =2.0
