--- a/mpie_cmti/environment.yml
+++ b/mpie_cmti/environment.yml
@@ -6,7 +6,7 @@ dependencies:
 - fitsnap3 =3.1.0.1
 - nbgitpuller =1.2.1
 - pyiron_base =0.9.1
-- pyironr_atomistics =0.6.1
+- pyiron_atomistics =0.6.1
 - pyiron_snippets =0.1.1
 - pyiron_contrib =0.1.16
 - pyiron_potentialfit =0.2.0
