--- a/potentialworkshop/environment.yml
+++ b/potentialworkshop/environment.yml
@@ -8,5 +8,6 @@ dependencies:
 - pyiron_gpl =0.0.5
 - nbgitpuller =1.2.1
 - python-ace =0.2.8
+- tensorpotential =0.2.0
 - calphy =1.3.7
 - pyxtal =0.6.7
