--- a/continuum/environment.yml
+++ b/continuum/environment.yml
@@ -1,7 +1,7 @@
 channels:
 - conda-forge
 dependencies:
-- damask =3.0.0a8
+- damask =3.0.0b2.post0
 - fenics =2019.1.0=*_42
 - mshr =2019.1.0=*_9
 - pyiron_continuum =0.0.8
