--- a/mpie_cmti/environment.yml
+++ b/mpie_cmti/environment.yml
@@ -12,6 +12,7 @@ dependencies:
 - pyiron_potentialfit =0.3.2
 - pyiron_workflow =0.9.1
 - pyiron_gui =0.0.12
+- executorlib =0.0.1
 - matgl =0.9.2
 - mlip =2.0
 - sqsgenerator =0.3
