--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pyiron-gpl==0.0.5
 pyiron_snippets==0.1.1
 pyiron_potentialfit==0.3.2
 calphy==1.3.8
+executorlib==0.0.1
 damask==3.0.0a8
 fenics==2019.1.0
 gpaw==24.1.0
@@ -17,7 +18,7 @@ jupyter-server-proxy==4.1.2
 nbgitpuller==1.2.1
 nglview==3.1.2
 pystem==0.0.26
-python-ace==0.2.8
+python-ace==0.3.0
 pyvista==0.43.6
 pyxem==0.19.1
 pyxtal==0.6.7
