--- a/continuum/environment.yml
+++ b/continuum/environment.yml
@@ -4,6 +4,7 @@ dependencies:
 - damask =3.0.0a8
 - fenics =2019.1.0=*_42
 - mshr =2019.1.0=*_9
+- pyiron_base =0.8.2
 - pyiron_continuum =0.0.8
 - pyiron_gpl =0.0.5
 - pyvista =0.43.6
