--- a/md/Dockerfile
+++ b/md/Dockerfile
@@ -19,7 +19,8 @@ RUN mamba env update -n base -f ${HOME}/environment.yml && \
 
 USER root
 ENV NOTEBOOK_DIR=${HOME}/notebooks_atomistics
-RUN chmod +x ${HOME}/include_notebooks.sh && \
+RUN rm -rf ${HOME}/notebooks_base && \
+    chmod +x ${HOME}/include_notebooks.sh && \
     /bin/bash include_notebooks.sh &&\
     fix-permissions ${HOME} && \
     fix-permissions $CONDA_DIR
