Always start form jupyter/notebook
By removing the dependence of the Docker Containers from each other and only depend on `jupyter/notebook` the download time is increased. At the same time the recipe to build the container is drastically simplified as it is the same recipe for all containers. This would allow us to build the containers directly in the corresponding repositories.

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -2,15 +2,9 @@ ARG ROOT_CONTAINER=jupyter/base-notebook:ubuntu-22.04@sha256:0ec801994602a53d391
 ARG BASE_CONTAINER=$ROOT_CONTAINER
 FROM $BASE_CONTAINER
 
-MAINTAINER Jan Janssen <janssen@mpie.de>, Muhammad Hassani <hassani@mpie.de>
+MAINTAINER Jan Janssen <janssen@mpie.de>
 
 USER root
-
-#removing the default user and the corresponding home directory.
-#RUN rm -r /home/$NB_USER
-#RUN userdel $NB_USER
-
-#ARG DOCKER_USER="pyiron"
 ARG DOCKER_UID="1000"
 ARG DOCKER_GID="100"
 
@@ -22,17 +16,10 @@ ENV CONDA_DIR=/opt/conda \
     LANGUAGE=en_US.UTF-8 \
     DOCKER_UID=$DOCKER_UID \
     DOCKER_GID=$DOCKER_GID
-    # DOCKER_USER=$DOCKER_USER
 
-#ENV HOME=/home/$DOCKER_USER
 ENV HOME=/home/$NB_USER
 
-
 COPY apt.txt /tmp/
-# creating account for pyiron_user.
-# RUN useradd -m -s /bin/bash -N -u $DOCKER_UID $DOCKER_USER && \
-#     chown $DOCKER_USER:$NB_GID $CONDA_DIR && \
-#     chmod g+w /etc/passwd
 
 RUN apt-get update -y && \
     xargs -a /tmp/apt.txt apt-get install -y && \
@@ -56,10 +43,6 @@ RUN chmod +x ${HOME}/include_notebooks.sh && \
     fix-permissions /etc/jupyter/ &&\
     fix-permissions ${HOME} && \
     fix-permissions $CONDA_DIR
-
-#confirming that /home/jovyan is removed
-#RUN rm -r /home/$NB_USER
-# Switch back to pyiron to avoid accidental container runs as root
 
 USER $DOCKER_UID
 
